# rs-agri3d

./: .gitmodules  README.md
agri3d_ws/install/: local_setup.sh  setup.sh
agri3d_ws/install/rslidar_msg/share/rslidar_msg/: package.sh
agri3d_ws/install/rslidar_msg/share/rslidar_msg/cmake/: export_rslidar_msg__rosidl_generator_pyExport.cmake  export_rslidar_msg__rosidl_typesupport_fastrtps_cExport.cmake  rslidar_msgConfig.cmake  rslidar_msg__rosidl_typesupport_cExport.cmake  rslidar_msg__rosidl_typesupport_cppExport.cmake  rslidar_msg__rosidl_typesupport_introspection_cExport.cmake
agri3d_ws/install/rslidar_msg/share/rslidar_msg/msg/: RslidarPacket.json
agri3d_ws/install/rslidar_sdk/lib/rslidar_sdk/: rslidar_sdk_node
agri3d_ws/install/rslidar_sdk/share/rslidar_sdk/: local_setup.sh  package.sh
agri3d_ws/install/zed2i_nodes/lib/zed2i_nodes/: zed_img_node  zed_imu_node
agri3d_ws/install/zed2i_nodes/share/zed2i_nodes/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
agri3d_ws/install/zed_components/include/zed_components/: cost_traversability.hpp  gnss_replay.hpp  json.hpp  sl_logging.hpp  sl_tools.hpp  sl_types.hpp  sl_win_avg.hpp  visibility_control.hpp  zed_camera_component.hpp  zed_camera_one_component.hpp
agri3d_ws/install/zed_components/share/zed_components/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
agri3d_ws/install/zed_ros2/share/zed_ros2/: package.sh
agri3d_ws/install/zed_wrapper/share/zed_wrapper/: local_setup.sh  package.sh
agri3d_ws/log/: latest_build
agri3d_ws/src/calibration/: package.xml  setup.py
agri3d_ws/src/calibration/calibration/: get_extrinsics.py  image_saver.py  point_match.py  save_data.py
agri3d_ws/src/zed2i_nodes/: CMakeLists.txt
agri3d_ws/src/zed2i_nodes/src/: zed_img_publisher.cpp  zed_imu_publisher.cpp
scripts/: bilateral_filtering.py  mapping.py  pcd_viewer.py  stereo_match.py
(+22 files in other folders)
